--- a/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
+++ b/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
@@ -34,32 +34,48 @@
           <thead>
             <th>
               Nombre de la Habitación
-              <app-sort-icon column="folio" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+              <app-sort-icon column="Codigo" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+                (sort)="sort($event)"></app-sort-icon>
+            </th>
+            <th>
+              Codigo de la Habitación
+              <app-sort-icon column="Numero" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
                 (sort)="sort($event)"></app-sort-icon>
             </th>
             <th style="text-align: center;">
               Tipo
-              <app-sort-icon column="estatus" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+              <app-sort-icon column="Tipo" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
                 (sort)="sort($event)"></app-sort-icon>
             </th>
             <th style="text-align: center;">
               Capacidad
-              <app-sort-icon column="estatus_Ama_De_Llaves" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+              <app-sort-icon column="Personas" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
                 (sort)="sort($event)"></app-sort-icon>
             </th>
             <th>
               Inventario
-              <app-sort-icon column="habitacion" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+              <app-sort-icon column="Inventario" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
                 (sort)="sort($event)"></app-sort-icon>
             </th>
             <th>Acciones</th>
           </thead>
           <tbody>
             <tr *ngFor="let habitacion of habitacionService.items$ | async">
-                <td>{{ habitacion.Codigo }}</td>
-                <td>{{ habitacion.Tipo }}</td>
+              <td>{{ habitacion.Codigo }}</td>
+              <td>{{ habitacion.Numero }}</td>
+              <td>{{ habitacion.Tipo }}</td>
                 <td>{{ habitacion.Personas }}</td>
                 <td>{{ habitacion.Inventario }}</td>
+                <td>
+                <a
+                title="Borrar Habitación"
+                class="btn btn-icon btn-light btn-hover-danger btn-sm"
+                (click)="popDelete(habitacion)">
+                <span [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'" cacheSVG="true"
+            class="svg-icon svg-icon-md svg-icon-danger">
+          </span>
+              </a>
+                </td>
             </tr>
           </tbody>
         </table>
