--- a/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
+++ b/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
@@ -334,6 +334,7 @@
         </form>
     </div><!--Fin  FloatContainer-->
     <div class="card-footer col-lg-12">
+        <button style="float:right; margin: 5px;" class="btn btn-success" (click)="back()">REGRESAR</button>
         <button style="float:right; margin: 5px;" class="btn btn-danger" (click)="resetForm()">CANCELAR</button>
         <button style="float:right; margin: 5px;" class="btn btn-primary" (click)="onSubmit()">ACEPTAR</button>
     </div>
