--- a/src/app/pages/tarifas/tarifas.component.html
+++ b/src/app/pages/tarifas/tarifas.component.html
@@ -2,6 +2,7 @@
     <div class="card-header">
       <div class="card-title ">
         <h3 class="card-label">Tarifas</h3>
+        <button style="position: absolute; right: 0px; margin: 10px;" class="btn btn-danger" (click)="nuevaTarifaExpress()">Nueva Tarifa Express</button>
       </div>
 
     </div> 
@@ -10,7 +11,7 @@
 
   
       <!-- begin: Grouping -->
-      <ng-container *ngIf="grouping.getSelectedRowsCount()">
+      <!-- <ng-container *ngIf="grouping.getSelectedRowsCount()">
         <div class="form">
           <div class="row align-items-center form-group-actions margin-top-20 margin-bottom-20">
             <div class="col-xl-12">
@@ -24,62 +25,169 @@
             </div>
           </div>
         </div>
-      </ng-container>
+      </ng-container> -->
       <!-- end: Grouping -->
   
       <!-- begin:Table -->
       <div class="table-responsive angular-bootstrap-table">
-        
-        <table class="table overflow-hidden table-head-custom table-vertical-center">
-          <thead>
-        
-            <th>
-              Tarifa
-              <app-sort-icon column="folio" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
-                (sort)="sort($event)"></app-sort-icon>
-            </th>
-            <th>
-              Habitación
-              <app-sort-icon column="nombre" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
-                (sort)="sort($event)"></app-sort-icon>
-            </th>
-            <th style="text-align: center;">
-              Alimentos
-              <app-sort-icon column="estatus" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
-                (sort)="sort($event)"></app-sort-icon>
-            </th>
-            <th style="text-align: center;">
-              Cancelación
-              <app-sort-icon column="estatus_Ama_De_Llaves" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
-                (sort)="sort($event)"></app-sort-icon>
-            </th>
-            <th>
-              Min / Max
-              <app-sort-icon column="habitacion" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
-                (sort)="sort($event)"></app-sort-icon>
-            </th>
-            <th>
-              Estado
-              <app-sort-icon column="llegada" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
-                (sort)="sort($event)"></app-sort-icon>
-            </th>
-          
-            <th>Acciones</th>
-          </thead>
-          <tbody>
-            <tr *ngFor="let tarifas of tarifasService.items$ | async ">
-                <td>{{ tarifas.Tarfia }}</td>
-                <td>{{ tarifas.Habitacion }}</td>
-                <td>{{ tarifas.Plan }}</td>
-                <td>{{ tarifas.Politicas }}</td>
-                <td>{{ tarifas.Dias }}</td>
-                <td>{{ tarifas.Estado }}</td>
-            </tr>
-          </tbody>
+        <table mat-table [dataSource]="dataSource">
+      
+          <!-- Position Column -->
+          <ng-container matColumnDef="Tarifa">
+            <th mat-header-cell *matHeaderCellDef> Tarifa </th>
+            <td mat-cell *matCellDef="let element"> {{element.Tarifa}} </td>
+          </ng-container>
+      
+          <!-- Name Column -->
+          <ng-container matColumnDef="Habitacion">
+            <th mat-header-cell *matHeaderCellDef> Habitacion </th>
+            <td mat-cell *matCellDef="let element"> {{element.Habitacion}} </td>
+          </ng-container>
+      
+          <!-- Weight Column -->
+          <ng-container matColumnDef="Plan">
+            <th mat-header-cell *matHeaderCellDef> Plan </th>
+            <td mat-cell *matCellDef="let element"> {{element.Plan}} </td>
+          </ng-container>
+      
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="Politicas">
+            <th mat-header-cell *matHeaderCellDef> Politicas </th>
+            <td mat-cell *matCellDef="let element"> {{element.Politicas}} </td>
+          </ng-container>
+
+          <!-- Estancia Column -->
+          <ng-container matColumnDef="Estancia">
+            <th mat-header-cell *matHeaderCellDef> Min/Max </th>
+            <td mat-cell *matCellDef="let element"> {{element.EstanciaMinima}}/{{element.EstanciaMaxima}}  </td>
+          </ng-container>
+
+          <!-- Estancia Column -->
+          <ng-container matColumnDef="Estado">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element"> {{element.Estado}} </td>
+          </ng-container>
+
+          <!-- Estancia Column -->
+          <ng-container matColumnDef="Acciones">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td (click)="$event.stopPropagation()" mat-cell *matCellDef="let element"> 
+              <a
+                  title="Editar Tarifa"
+                  class="mx-3 btn btn-icon btn-light btn-hover-primary btn-sm"
+                  >
+                  <span (click)="editarTarifaExpress()" [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
+                    class="svg-icon svg-icon-md svg-icon-primary">
+                  </span>
+                </a>
+            
+                <a title="Borrar Tarifa" class="btn btn-icon btn-light btn-hover-danger btn-sm">
+                  <span (click)="promtDelete(element.Habitacion)" [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'" cacheSVG="true"
+                    class="svg-icon svg-icon-md svg-icon-danger">
+                  </span>
+                </a>   
+            </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                       showFirstLastButtons 
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
+      </div>
+
+      <!-- end: Table -->
+     
+    </div>
+  </div>
+
+  <div class="card card-custom gutter-b">
+    <div class="card-header">
+      <div class="card-title ">
+        <h3 class="card-label">Tarifas Especiales</h3>
+        <button style="position: absolute; right: 0px; margin: 10px;" class="btn btn-primary" (click)="nuevaTarifaEspecial()">Nueva Tarifa Especial</button>
+      </div>
+
+    </div> 
+  
+    <div class="card-body">
+
+
+  
+      <!-- begin:Table -->
+      <div class="table-responsive angular-bootstrap-table">
+        <table mat-table [dataSource]="dataSourceEspecial">
+      
+          <!-- Position Column -->
+          <ng-container matColumnDef="Tarifa">
+            <th mat-header-cell *matHeaderCellDef> Tarifa </th>
+            <td mat-cell *matCellDef="let element"> {{element.Tarifa}} </td>
+          </ng-container>
+      
+          <!-- Name Column -->
+          <ng-container matColumnDef="Habitacion">
+            <th mat-header-cell *matHeaderCellDef> Habitacion </th>
+            <td mat-cell *matCellDef="let element"> {{element.Habitacion}} </td>
+          </ng-container>
+      
+          <!-- Weight Column -->
+          <ng-container matColumnDef="Plan">
+            <th mat-header-cell *matHeaderCellDef> Plan </th>
+            <td mat-cell *matCellDef="let element"> {{element.Plan}} </td>
+          </ng-container>
+      
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="Politicas">
+            <th mat-header-cell *matHeaderCellDef> Politicas </th>
+            <td mat-cell *matCellDef="let element"> {{element.Politicas}} </td>
+          </ng-container>
+
+          <!-- Estancia Column -->
+          <ng-container matColumnDef="Estancia">
+            <th mat-header-cell *matHeaderCellDef> Min/Max </th>
+            <td mat-cell *matCellDef="let element"> {{element.EstanciaMinima}}/{{element.EstanciaMaxima}}  </td>
+          </ng-container>
+
+          <!-- Estancia Column -->
+          <ng-container matColumnDef="Estado">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element"> {{element.Estado}} </td>
+          </ng-container>
+
+          <!-- Estancia Column -->
+          <ng-container matColumnDef="Acciones">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td  (click)="$event.stopPropagation()" mat-cell *matCellDef="let element"> 
+              <a
+                  title="Editar Tarifa"
+                  class="mx-3 btn btn-icon btn-light btn-hover-primary btn-sm"
+                  >
+                  <span (click)="editTarifaEspecial()" [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
+                    class="svg-icon svg-icon-md svg-icon-primary">
+                  </span>
+                </a>
+            
+                <a title="Borrar Tarifa" class="btn btn-icon btn-light btn-hover-danger btn-sm">
+                  <span (click)="promtDelete(element.Habitacion)" [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'" cacheSVG="true"
+                    class="svg-icon svg-icon-md svg-icon-danger">
+                  </span>
+                </a>   
+            </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                       showFirstLastButtons 
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
       </div>
       <!-- end: Table -->
-      <app-paginator class="flex-wrap d-flex justify-content-between align-items-center" [paginator]="paginator"
-        [isLoading]="isLoading" (paginate)="paginate($event)"></app-paginator>
+     
     </div>
   </div>
