--- a/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
+++ b/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
@@ -65,8 +65,17 @@
               <td style="text-align: center; vertical-align: middle;">{{ habitacion.Numero }}</td>
               <td style="text-align: center; vertical-align: middle;">{{ habitacion.Tipo }}</td>
                 <td style="text-align: center; vertical-align: middle;">{{ habitacion.Personas }}</td>
-                <td style="text-align: center; vertical-align: middle;">{{ habitacion.Inventario }}</td>
+                <td style="text-align: center; vertical-align: middle;">1</td>
+
                 <td style="text-align: center; vertical-align: middle;">
+                  <a
+                  title="Editar Folio"
+                  class="mx-3 btn btn-icon btn-light btn-hover-primary btn-sm"
+                  (click)="edit(habitacion)">
+                  <span [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
+                    class="svg-icon svg-icon-md svg-icon-primary">
+                  </span>
+                </a>
                 <a
                 title="Borrar Habitación"
                 class="btn btn-icon btn-light btn-hover-danger btn-sm"
